deploy/000-cm-dev.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lcserver
