deploy/101-app-service-account.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service-account
  namespace: lcserver
  labels:
    app: app-service-account
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-service-account
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        app: app-service-account
    spec:
      terminationGracePeriodSeconds: 300
      containers:
        - name: account-service
          image: 192.168.1.66:7090/lcserver/account-service:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8093
              name: http
            - containerPort: 8193
              name: grpc
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: config
              mountPath: /app/config.toml
              subPath: service-account-config.toml
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: config
