deploy/103-app-service-s3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service-s3
  namespace: lcserver
  labels:
    app: app-service-s3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-service-s3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: app-s3-service
    spec:
      terminationGracePeriodSeconds: 300
      containers:
        - name: s3-service
          image: 192.168.1.66:7090/lcserver/s3-service:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8094
              name: http
            - containerPort: 8194
              name: grpc
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: config
              mountPath: /app/config.toml
              subPath: service-s3-config.toml
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: config
