deploy/200-services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: api-account
  namespace: lcserver
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: app-api-account
  ports:
    - port: 8083
      targetPort: 8083
      nodePort: 32083
      protocol: TCP
